--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NODE_ENV=development
+NODE_ENV=production vite build --mode production
 GROQ_API_KEY="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"
 VITE_BACKEND_URL="http://localhost:3001"
